--- a/_sass/layouts/_course.scss
+++ b/_sass/layouts/_course.scss
@@ -1,4 +1,5 @@
 .layout-course{
+  padding-bottom: 350px;
   .parallax-container{
     bottom: 0;
     left: 0;
